--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1179,6 +1179,7 @@ section.outro span {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 2.5em;
+  white-space: nowrap;
 }
 
 @media (max-width: 960px) {
@@ -1193,17 +1194,18 @@ section.outro span {
   /* line 23, ../sass/custom/outro.scss */
 
   .memory-game section.outro p {
+    white-space: wrap;
     font-size: .75em;
   }
 }
 
-/* line 36, ../sass/custom/outro.scss */
+/* line 39, ../sass/custom/outro.scss */
 
 .memory-game section.outro p span {
   font-size: 120%;
 }
 
-/* line 39, ../sass/custom/outro.scss */
+/* line 42, ../sass/custom/outro.scss */
 
 .memory-game section.outro ul.charities {
   list-style: none;
@@ -1213,7 +1215,7 @@ section.outro span {
 }
 
 @media (max-width: 960px) {
-  /* line 39, ../sass/custom/outro.scss */
+  /* line 42, ../sass/custom/outro.scss */
 
   .memory-game section.outro ul.charities {
     font-size: .6em;
@@ -1225,7 +1227,7 @@ section.outro span {
 }
 
 @media (max-height: 667px), (max-width: 667px) {
-  /* line 39, ../sass/custom/outro.scss */
+  /* line 42, ../sass/custom/outro.scss */
 
   .memory-game section.outro ul.charities {
     margin-top: 1.5em;
@@ -1233,7 +1235,7 @@ section.outro span {
   }
 }
 
-/* line 59, ../sass/custom/outro.scss */
+/* line 62, ../sass/custom/outro.scss */
 
 .memory-game section.outro ul.charities div.row {
   width: 100%;
@@ -1244,7 +1246,7 @@ section.outro span {
 }
 
 @media (max-width: 960px) {
-  /* line 59, ../sass/custom/outro.scss */
+  /* line 62, ../sass/custom/outro.scss */
 
   .memory-game section.outro ul.charities div.row {
     margin-bottom: 1em;
@@ -1252,14 +1254,14 @@ section.outro span {
 }
 
 @media (max-height: 667px), (max-width: 667px) {
-  /* line 59, ../sass/custom/outro.scss */
+  /* line 62, ../sass/custom/outro.scss */
 
   .memory-game section.outro ul.charities div.row {
     font-size: .65em;
   }
 }
 
-/* line 74, ../sass/custom/outro.scss */
+/* line 77, ../sass/custom/outro.scss */
 
 .memory-game section.outro ul.charities li {
   display: table-cell;
@@ -1267,14 +1269,14 @@ section.outro span {
   text-align: center;
 }
 
-/* line 81, ../sass/custom/outro.scss */
+/* line 84, ../sass/custom/outro.scss */
 
 .memory-game section.outro span.blessing {
   font-size: 2.5em;
 }
 
 @media (max-width: 960px) {
-  /* line 81, ../sass/custom/outro.scss */
+  /* line 84, ../sass/custom/outro.scss */
 
   .memory-game section.outro span.blessing {
     font-size: 1.5em;
@@ -1282,14 +1284,14 @@ section.outro span {
 }
 
 @media (max-height: 667px), (max-width: 667px) {
-  /* line 81, ../sass/custom/outro.scss */
+  /* line 84, ../sass/custom/outro.scss */
 
   .memory-game section.outro span.blessing {
     font-size: .75em;
   }
 }
 
-/* line 94, ../sass/custom/outro.scss */
+/* line 97, ../sass/custom/outro.scss */
 
 .ie8 .memory-game section.outro {
   width: 1088px;
